test/2/type/ann-Int-Str.err
test/2/type/ann-Int-Str.ploy:1:8-9: type error: annotated: actual type is not expected type. actual type: Int
| main = 0:Str
         ~
test/2/type/ann-Int-Str.ploy:1:10-13: note: expected type: Str
| main = 0:Str
           ~~~
